crates/ndc-clickhouse-core/tests/snapshots/query_builder__chinook Parameters@01_simple_queries_02_with_predicate.request.json.snap
---
source: crates/ndc-clickhouse/tests/query_builder.rs
expression: printed_parameters
input_file: crates/ndc-clickhouse/tests/query_builder/chinook/01_simple_queries_02_with_predicate.request.json
---
param_p0=1
