crates/ndc-clickhouse-core/tests/snapshots/query_builder__chinook Parameters@02_relationships_05_traverse_relationship_in_predicate.request.json.snap
---
source: crates/ndc-clickhouse/tests/query_builder.rs
expression: printed_parameters
input_file: crates/ndc-clickhouse/tests/query_builder/chinook/02_relationships_05_traverse_relationship_in_predicate.request.json
---
param_p0=AC/DC
