crates/ndc-clickhouse-core/tests/snapshots/query_builder__chinook Parameters@03_variables_01_simple_predicate.request.json.snap
---
source: crates/ndc-clickhouse/tests/query_builder.rs
expression: printed_parameters
input_file: crates/ndc-clickhouse/tests/query_builder/chinook/03_variables_01_simple_predicate.request.json
---
param_p0={"_varset_id":[1,2],"_var_ArtistId":[1,2]}
